--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,14 +1,37 @@
+body{
+    background: rgb(131,58,180);
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(91,155,167,1) 50%);
+    padding:0;
+    margin:0;
+    overflow-x: hidden;
+}
 .container{
-   width: 80%;
+   width: 60%;
    min-height: 500px;
     margin: 10% auto;
-    border: 1px solid red;
+   background-color: #fff;
+    border-radius: 5px;
+    padding-top:30px;
 }
 
 .todo-form{
-    width: 50%;
     min-height: 100px;
     margin: 5% auto;
-    border: 1px solid blue;
     text-align: center;
+}
+
+input[type="text"]{
+    width: 65%;
+    padding: 10px;
+    font-family: Arial;
+    font-size: 20px;
+}
+
+input[type="submit"]{
+    background-color: rgb(131,58,180);
+    padding: 10px 15px;
+    color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
 }
