--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,10 @@
     <title>Todo App</title>
 </head>
 <body>
-<div th:text="'You are logged in as: ' + ${currentUser}" style="color: white;"></div>
+<div th:text="'You are logged in as: ' + ${currentUser}" class="auth-info"></div>
+<form class="logout-wrap" th:action="@{/logout}">
+    <input type="submit" value="Logout">
+</form>
  <div class="container">
      <form class="todo-form" th:action="@{/addTask}">
          <input type="text" th:name="todoTask" placeholder="Input your task..." >
